Fix import paths

--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -1,5 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
+@require '../../../base/color'
+
 .pnav
 	display none
 	border-top 1px solid lighten($silver, 75%)
