--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -1,6 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require '../../color'
+@require '../../base/color'
 
 body
 	background-color #f7f9fc
