Add arena layout

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -30,9 +30,8 @@ body
 			margin-left 10px
 			border-radius 2px
 
-		&.-link
-			padding 7px 8px 9px
-			line-height 24px
+		&.-link,
+		&.-bell
 			transition background-color 0.25s ease-in-out
 
 			img
@@ -46,6 +45,14 @@ body
 
 				img
 					opacity 0.5
+
+		&.-link
+			padding 7px 8px 9px
+			line-height 24px
+		
+		&.-bell a
+			display block
+			padding 8px
 
 .pfoot
 	padding 15px 0
