Add style for bell badge

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -45,6 +45,12 @@ body
 		&.-bell a
 			display block
 			padding 8px
+		
+		.badge
+			position absolute
+			bottom 0
+			right 0
+			color white
 
 .pside
 	width auto
