--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -53,6 +53,12 @@ body
 		&.-bell a
 			display block
 			padding 8px
+		
+		.badge
+			position absolute
+			bottom 0
+			right 0
+			color white
 
 .pfoot
 	padding 15px 0
