Fix arena layout style import error

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require '../../node_modules/sleek/src/base/func'
-@require '../../node_modules/sleek/src/base/color'
+@require '../../base/func'
+@require '../../base/color'
 
 body
 	background-color $dark
