Add extra small size avatar

--- a/src/base/avatar.styl
+++ b/src/base/avatar.styl
@@ -10,11 +10,18 @@
 .avatar
 	position relative
 
-	&.mini
+	&.-sm,
+	&.-xs
 		display inline-block
-		width 40px
-		margin-right 8px
+		margin-right 10px
 		text-align center
+
+	&.-sm
+		width 40px
+		
+	&.-xs
+		width 20px
+		margin-right 5px
 
 	.emblem
 		position absolute
