Update broadcast style

--- a/src/base/alert.styl
+++ b/src/base/alert.styl
@@ -5,9 +5,10 @@
 .alert
 	border-radius 2px
 
-.alert.-broadcast
-	border-width 0 0 1px
-	border-radius 0
+	&.-broadcast
+		margin 0
+		border-width 0 0 1px
+		border-radius 0
 
 _alert(name, code)
 	.alert.-{name}
