Fix bell dropdown header button glitch

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -27,7 +27,7 @@ body
 			border-radius 2px
 
 		&.-link,
-		&.-bell
+		&.-bell > a
 			transition background-color 0.25s ease-in-out
 
 			img
@@ -42,7 +42,7 @@ body
 			padding 7px 8px 9px
 			line-height 24px
 		
-		&.-bell a
+		&.-bell > a
 			display block
 			padding 8px
 		
