Add Bengali font support

--- a/src/base/font.styl
+++ b/src/base/font.styl
@@ -69,3 +69,35 @@
 	font-weight 700
 	font-display swap
 	src local('Ubuntu Mono Bold'), local('UbuntuMono-Bold'), url('../fonts/ubuntumono-b-webfont.woff2') format('woff2'), url('../fonts/ubuntumono-b-webfont.woff') format('woff')
+
+@font-face
+	font-family 'Hind Siliguri'
+	font-style normal
+	font-weight 700
+	font-display swap
+	src local('Hind Siliguri Bold'), local('HindSiliguri-Bold'), url('../fonts/HindSiliguri-Bold.woff2') format('woff2'), url('../fonts/HindSiliguri-Bold.woff') format('woff')
+	unicode-range U+00-FF, U+980-9FF
+
+@font-face
+	font-family 'Hind Siliguri'
+	font-style normal
+	font-weight 300
+	font-display swap
+	src local('Hind Siliguri Light'), local('HindSiliguri-Light'), url('../fonts/HindSiliguri-Light.woff2') format('woff2'), url('../fonts/HindSiliguri-Light.woff') format('woff')
+	unicode-range U+00-FF, U+980-9FF
+
+@font-face
+	font-family 'Hind Siliguri'
+	font-style normal
+	font-weight 500
+	font-display swap
+	src local('Hind Siliguri Medium'), local('HindSiliguri-Medium'), url('../fonts/HindSiliguri-Medium.woff2') format('woff2'), url('../fonts/HindSiliguri-Medium.woff') format('woff')
+	unicode-range U+00-FF, U+980-9FF
+
+@font-face
+	font-family 'Hind Siliguri'
+	font-style normal
+	font-weight 400
+	font-display swap
+	src local('Hind Siliguri Regular'), local('HindSiliguri-Regular'), url('../fonts/HindSiliguri-Regular.woff2') format('woff2'), url('../fonts/HindSiliguri-Regular.woff') format('woff')
+	unicode-range U+00-FF, U+980-9FF
