--- a/src/base/text.styl
+++ b/src/base/text.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
 body 
-	font-family 'Ubuntu', 'Helvetica', sans-serif
+	font-family 'Ubuntu', 'Hind Siliguri', 'Helvetica', sans-serif
 	font-size 14px
 	line-height 1.42857143
 	color $dark
