--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -71,16 +71,15 @@ body
 
 	&__link
 		display block
-		padding 10px 15px
-		border-left 0 solid alpha(white, 50%)
+		padding 10px 15px 10px 10px
+		border-left 5px solid $ebony
 		background-color transparent
 		color white
-		transition padding-left 0.125s ease-in-out, border-left 0.125s ease-in-out
+		transition border-left-color 0.125s ease-in-out
 
 		&:hover,
 		&:focus
-			border-left-width 5px
-			padding-left 10px
+			border-left-color alpha(white, 50%)
 			color white
 	
 		&.disabled
@@ -88,8 +87,7 @@ body
 			cursor not-allowed
 
 		&.-active
-			border-left 5px solid white
-			padding-left 10px
+			border-left-color white
 	
 		.icon
 			margin -2px 5px 0 0
