--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -5,6 +5,7 @@
 .pnav
 	display none
 	border-top 1px solid lighten($silver, 75%)
+	font-size 0
 	
 	&.open
 		display block
@@ -13,6 +14,7 @@
 		position relative
 		width 100%
 		margin 12px 0
+		font-size 14px
 		
 		input
 			width 100%
@@ -33,8 +35,10 @@
 		
 	&__item
 		color $dark
+		font-size 14px
 
-		&.-link
+		&.-link,
+		&.-drop > a
 			&:hover,
 			&:focus,
 			&:active
@@ -47,14 +51,23 @@
 
 @media (max-width: 991px)
 	.pnav
-		&__item.-link
+		&__item.-link,
+		&__item.-drop > a,
+		&__menu > a
 			display block
 			margin 0 -15px
 			padding 10px 15px
 
 			&.-active
 				border-left 2px solid $blue
-				padding-left 13px
+				padding-left 13px,
+
+		&__item.-drop
+			.pnav__menu
+				display none
+			
+			&.open .pnav__menu
+				display block
 
 @media (min-width: 992px)
 	.pnav
@@ -66,9 +79,11 @@
 			margin 6px 0
 		
 		&__item
-			float left
+			// float left
+			display inline-block
 			
-			&.-link
+			&.-link,
+			&.-drop > a
 				padding 15px 15px 13px
 				border-bottom 2px solid white
 				transition border-bottom-color 0.125s ease-in-out
@@ -79,3 +94,44 @@
 				
 				&.-active
 					border-bottom-color $blue
+
+			&.-drop
+				position relative
+
+				> a
+					display inline-block
+
+				.pnav__menu
+					display none
+					float left
+					position absolute
+					top 100%
+					left 0
+					z-index 1000
+					min-width 160px
+					margin 5px 0 0
+					padding 0
+					border 1px solid darken($silver, 5%)
+					border-radius 2px
+					overflow hidden
+					font-size 14px
+					text-align left
+					background-color white
+					box-shadow 0 3px 5px alpha($dark, 0.05)
+					
+					> a
+						display block
+						padding 10px 15px
+						color $dark
+						transition background-color 0.25s ease-in-out
+
+						&:hover,
+						&:focus,
+						&:active
+							background-color lighten($silver, 75%)
+						
+						.icon
+							font-size 16px
+				
+				&.open .pnav__menu
+					display block
