--- a/src/base/artifact.styl
+++ b/src/base/artifact.styl
@@ -19,19 +19,19 @@
 		margin 40px 0 15px
 
 	h2
-		font-size 22px
+		font-size 24px
 
 	h3
-		font-size 19px
+		font-size 22px
 
 	h4
-		font-size 16px
+		font-size 20px
 
 	h5
-		font-size 13px
+		font-size 18px
 		
 	h6
-		font-size 10px
+		font-size 16px
 
 	p > img
 		display block
@@ -47,7 +47,7 @@
 	
 	.caption
 		h1, h2, h3, h4, h5, h6
-			margin-top 10px
+			margin-top 0
 	
 	a.caption,
 	a.caption:hover,
