--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -3,48 +3,102 @@
 @require './func'
 @require './color'
 
+table
+	border-spacing 0
+	border-collapse collapse
+	background-color transparent
+
+td,
+th
+	padding 0
+	text-align left
+
 .table
-	border none !important
+	width 100%
+	max-width 100%
+	margin-bottom 20px
+	border none
 
-	> thead
-		> tr
-			border-bottom 1px solid lighten($silver, 50%)
+	> thead > tr > th,
+	> tbody > tr > th,
+	> tfoot > tr > th,
+	> thead > tr > td,
+	> tbody > tr > td,
+	> tfoot > tr > td
+		padding 8px
+		line-height 1.42857143
+		vertical-align top
 
-			> th
-				border none
-				font-weight 500
+	> thead > tr
+		border-bottom 2px solid lighten($silver, 50%)
+		
+		> th
+			// font-weight bold
+			vertical-align bottom
+			
+			.text + .icon
+				margin-left 5px
 
-				.text + .icon
-					margin-left 5px
-
-	> tbody
-		> tr
-			border-bottom 1px solid lighten($silver, 50%)
-
-			> td
-				border none
-				
-				vertical-align middle
-
-			&:last-child
-				border none
-
-	> thead,
-	> tbody
-		> tr.active > th,
-		> tr.active > td,
-		> tr > th.active,
-		> tr > td.active
-			background-color lighten($silver, 75%)
-	
-.table--nested
-	margin-bottom 0
+	> thead:first-child > tr:first-child > th,
+	> thead:first-child > tr:first-child > td
+		border-top 0
 	
 	> tbody > tr
-		border-bottom none
+		border-bottom 1px solid lighten($silver, 50%)
+		
+		&:last-child
+			border-bottom none
+
+	> tbody + tbody
+		border-top 1px solid lighten($silver, 50%)
+
+	.table .table
+		background-color #fff
+
+	> thead > tr > td.active,
+	> tbody > tr > td.active,
+	> tfoot > tr > td.active,
+	> thead > tr > th.active,
+	> tbody > tr > th.active,
+	> tfoot > tr > th.active,
+	> thead > tr.active > td,
+	> tbody > tr.active > td,
+	> tfoot > tr.active > td,
+	> thead > tr.active > th,
+	> tbody > tr.active > th,
+	> tfoot > tr.active > th
+		background-color lighten($silver, 75%)
+
+	&.-nested
+		margin-bottom 0
+		
+		> tbody > tr
+			border-bottom none
+
+.tablebox
+	min-height .01%
+	overflow-x auto
+
+@media screen and (max-width: 767px)
+	.tablebox
+		width 100%
+		margin-bottom 15px
+		overflow-y hidden
+		border 1px solid lighten($silver, 50%)
+
+		> .table
+			margin-bottom 0
+
+		> .table > thead > tr > th,
+		> .table > tbody > tr > th,
+		> .table > tfoot > tr > th,
+		> .table > thead > tr > td,
+		> .table > tbody > tr > td,
+		> .table > tfoot > tr > td
+			white-space nowrap
 
 .portlet > .content
-	> .table-responsive:last-child > .table,
+	> .tablebox:last-child > .table,
 	> .table:last-child
 		margin-bottom 0
 
@@ -58,7 +112,7 @@
 			padding-right 0
 
 @media (min-width: 768px)
-	.portlet > .content > .table-responsive > .table
+	.portlet > .content > .tablebox > .table
 	.portlet > .content > .scroller > .table
 		thead > tr > th:first-child,
 		tbody > tr > td:first-child
@@ -67,7 +121,3 @@
 		thead > tr > th:last-child,
 		tbody > tr > td:last-child
 			padding-right 0
-
-@media (max-width: 767px)
-	.table-responsive
-		border 1px solid lighten($silver, 50%)
