--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -33,8 +33,7 @@ th
 		border-bottom 2px solid lighten($silver, 50%)
 		
 		> th
-			// font-weight bold
-			vertical-align bottom
+			font-weight bold
 			
 			.text + .icon
 				margin-left 5px
