--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -2,6 +2,7 @@
 
 @require './func'
 @require './color'
+@require './reset'
 @require './font'
 @require './text'
 @require './form'
@@ -17,5 +18,4 @@
 @require './pagination'
 @require './modal'
 @require './alert'
-@require './basic'
 @require './utility'
