--- a/src/base/reset.styl
+++ b/src/base/reset.styl
@@ -4,13 +4,13 @@
 @require './color'
 
 body 
-	margin 0 !important
-	padding 0 !important
+	margin 0
+	padding 0
 
 hr
 	margin 20px 0
 	border none
-	border-top 1px solid lighten($silver, 20%)
+	border-top 1px solid lighten($silver, 25%)
 
 a
 	text-decoration none
@@ -20,10 +20,7 @@ a
 	&:active,
 	&:focus
 		text-decoration none
-
-	&:hover,
-	&:focus
-		color darken($blue, 20%)
+		color darken($blue, 25%)
 
 label
 	font-weight normal
