Darken anchor color

--- a/src/base/reset.styl
+++ b/src/base/reset.styl
@@ -14,13 +14,13 @@ hr
 
 a
 	text-decoration none
-	color $blue
+	color mix($blue, $ebony, 75%)
 
 	&:hover,
 	&:active,
 	&:focus
 		text-decoration none
-		color darken($blue, 25%)
+		color mix($blue, $ebony, 25%)
 
 label
 	font-weight normal
