Restore original anchor color

--- a/src/base/reset.styl
+++ b/src/base/reset.styl
@@ -14,13 +14,13 @@ hr
 
 a
 	text-decoration none
-	color mix($blue, $ebony, 75%)
+	color $blue
 
 	&:hover,
 	&:active,
 	&:focus
 		text-decoration none
-		color mix($blue, $ebony, 25%)
+		color mix($blue, $ebony, 75%)
 
 label
 	font-weight normal
