Fix inactive arena sidebar link border color

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -72,7 +72,7 @@ body
 	&__link
 		display block
 		padding 10px 15px 10px 10px
-		border-left 5px solid $ebony
+		border-left 5px solid $dark
 		background-color transparent
 		color white
 		transition border-left-color 0.125s ease-in-out
