--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -7,6 +7,7 @@
 @require './text'
 @require './form'
 @require './table'
+@require './badge'
 @require './button'
 @require './dropdown'
 @require './label'
