--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -28,6 +28,7 @@
 			> .badge
 				margin-top -1px
 				margin-left 5px
+				background-color alpha(white, 12.5%)
 				color $blue
 
 			> .icon + .text
@@ -50,8 +51,8 @@
 				background-color $blue
 				
 				.badge
+					background-color alpha(white, 12.5%)
 					color white
-					background-color rgba(255, 255, 255, 0.125)
 
 	&.-stacked
 		> li
