Tweak badges in pills

--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -26,8 +26,9 @@
 				background-color alpha($blue, 25%)
 				
 			> .badge
+				float right
 				margin-top -1px
-				margin-left 5px
+				margin-left 10px
 				background-color alpha(white, 12.5%)
 				color $blue
 
