--- a/src/base/badge.styl
+++ b/src/base/badge.styl
@@ -6,3 +6,4 @@
 	border-radius 3px
 	background-color alpha($silver, 50%)
 	color mix($dark, $muted)
+	transition background-color 0.25s ease-in-out
