--- a/src/base/badge.styl
+++ b/src/base/badge.styl
@@ -7,3 +7,6 @@
 	background-color alpha($silver, 50%)
 	color mix($dark, $muted)
 	transition background-color 0.25s ease-in-out
+
+	&:empty
+		display none
