Update muted color

--- a/src/base/color.styl
+++ b/src/base/color.styl
@@ -1,10 +1,11 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
 $dark = #2f353b
-$muted = lighten($dark, 25%)
 $ebony = #22313f
 $blue = #3598dc
 $green = #26c281
 $red = #e35b5a
 $orange = #e87e04
 $silver = #e7ecf1
+
+$muted = mix($dark, $silver)
