Add pills divider style

--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -68,6 +68,11 @@
 				background-color transparent
 				cursor not-allowed
 				opacity 0.75
+		
+		&.-divider
+			height 1em
+			margin 1em
+			border-right 1px solid $silver
 
 	&.-stacked
 		> li
