--- a/src/base/portlet.styl
+++ b/src/base/portlet.styl
@@ -34,7 +34,11 @@
 				font-size 24px
 		
 		> .actions
-			padding 6px 0
+			padding 5px 0
+
+			.btn
+				padding 5px 10px
+				font-size 0.95em
 
 	> .header > .actions,
 	> .content > .actions
