--- a/src/widgets/icon/index.styl
+++ b/src/widgets/icon/index.styl
@@ -17,7 +17,7 @@ _iconcolor(name, filter)
 	.icon.{name}
 		filter filter !important
 
-	.btn.{name} .icon
+	.btn.-{name} .icon
 		filter filter
 
 _iconcolor('muted', invert(39%) sepia(15%) saturate(430%) hue-rotate(167deg) brightness(96%) contrast(86%))
@@ -31,12 +31,12 @@ _iconcolor('silver', invert(94%) sepia(11%) saturate(94%) hue-rotate(169deg) bri
 .icon.white:not(.custom)
 	filter invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%) !important
 
-.btn.default .icon:not(.custom),
-.btn.white .icon:not(.custom)
+.btn.-default .icon:not(.custom),
+.btn.-white .icon:not(.custom)
 	filter invert(39%) sepia(15%) saturate(430%) hue-rotate(167deg) brightness(96%) contrast(86%)
 
-.btn.blue .icon:not(.custom),
-.btn.red .icon:not(.custom)
+.btn.-blue .icon:not(.custom),
+.btn.-red .icon:not(.custom)
 	filter invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%)
 
 .icon.sm
