--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -15,6 +15,15 @@
 		position relative
 		float left
 
+		&:not(:first-child):not(:last-child):not(.dropdown-toggle)
+			border-radius 0
+
+		&:first-child:not(:last-child):not(.dropdown-toggle)
+			border-radius 3px 0 0 3px
+
+		&:last-child:not(:first-child):not(.dropdown-toggle)
+			border-radius 0 3px 3px 0
+
 .btn
 	display inline-block
 	padding 10px 15px
