--- a/src/base/portlet.styl
+++ b/src/base/portlet.styl
@@ -33,6 +33,7 @@
 				margin -2px 5px 0 0
 				font-size 24px
 		
+		// DEPRECATED: to be replaced by .panel__actions
 		> .actions
 			padding 5px 0
 
@@ -61,6 +62,14 @@
 		.progress
 			margin-bottom 0
 	
+	.panel__actions
+		float right
+		padding 5px 0
+
+		.btn
+			padding 5px 10px
+			font-size 0.95em
+	
 	// XXX: Change to &__drawer after portlet is renamed to panel
 	.panel__drawer
 		display none
@@ -69,7 +78,7 @@
 		border-bottom 1px solid #f2f5f8
 
 		&.-open
-			display block	
+			display block
 	
 	&.fit
 		padding 0
