--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -64,7 +64,7 @@ _button(name, bg, text, edge=10%, hover=30%, active=15%)
 			box-shadow inset 0 -2px 0 darken(bg, hover)
 
 		&.-{name}:active,
-		&.-{name}.active
+		&.-{name}.-active
 			box-shadow inset 1px 2px 0 darken(bg, active)
 			
 		&.-{name}.-disabled,
