Change default button style

--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -74,7 +74,7 @@ _button(name, bg, text, edge=10%, hover=30%, active=15%)
 	.open > &.-{name}:first-child
 		box-shadow inset 1px 2px 0 darken(bg, active)
 
-_button('default', #e1e5ec, $muted)
+_button('default', #e1e5ec, $dark)
 _button('blue', $blue, white, 20%, 60%, 30%)
 _button('red', $red, white, 20%, 60%, 30%)
 
