--- a/src/base/modal.styl
+++ b/src/base/modal.styl
@@ -8,6 +8,13 @@
 	border-radius 2px
 	box-shadow 0 5px 5px alpha($dark, 0.25)
 
+	.panel
+		padding 10px
+		border none
+		border-bottom 1px solid lighten($silver, 75%)
+		border-radius 0
+		box-shadow none
+
 .modal-header
 	border-color lighten($silver, 75%)
 
