--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -12,7 +12,7 @@
 @require './dropdown'
 @require './label'
 @require './avatar'
-@require './portlet'
+@require './panel'
 @require './dashlet'
 @require './artifact'
 @require './pagination'
