--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -90,7 +90,7 @@ th
 		> .table > tfoot > tr > td
 			white-space nowrap
 
-.portlet > .content
+.panel > .content
 	> .tablebox:last-child > .table,
 	> .table:last-child
 		margin-bottom 0
@@ -105,8 +105,8 @@ th
 			padding-right 0
 
 @media (min-width: 768px)
-	.portlet > .content > .tablebox > .table
-	.portlet > .content > .scroller > .table
+	.panel > .content > .tablebox > .table
+	.panel > .content > .scroller > .table
 		thead > tr > th:first-child,
 		tbody > tr > td:first-child
 			padding-left 0
