Add panel drawer style back

--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -44,6 +44,15 @@
 		.btn
 			padding 5px 10px
 			font-size 0.95em
+			
+	&__drawer
+		display none
+		padding 15px 0 0
+		border-top 1px solid $silver
+		border-bottom 1px solid $silver
+
+		&.-open
+			display block
 	
 	&__body .panel__actions
 		padding 0
