--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -81,6 +81,7 @@ _button('red', $red, white, 20%, 60%, 30%)
 .btn.-subtle
 	border 1px solid lighten($silver, 50%)
 	color $dark
+	background-color white
 	box-shadow inset 0 -2px 0 lighten($silver, 50%)
 
 	&:hover,
