--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -78,7 +78,7 @@ _button('default', #e1e5ec, $dark)
 _button('blue', $blue, white, 20%, 60%, 30%)
 _button('red', $red, white, 20%, 60%, 30%)
 
-.btn.-subtle
+.btn.-white
 	border 1px solid lighten($silver, 50%)
 	color $dark
 	background-color white
@@ -90,8 +90,30 @@ _button('red', $red, white, 20%, 60%, 30%)
 		box-shadow inset 0 -2px 0 $silver
 
 	&:active,
-	&.active
+	&.-active
 		box-shadow inset 1px 2px 1px lighten($silver, 50%)
 
-.open > &.-subtle:first-child
+.btn.-simple
+	border 1px solid lighten($silver, 50%)
+	color $dark
+	background-color white
+
+	&:hover,
+	&:focus,
+	&:active,
+	&.-active
+		border-color $silver
+
+.btn.-subtle
+	border 1px solid transparent
+	color $dark
+	background-color white
+
+	&:hover,
+	&:focus,
+	&:active,
+	&.-active
+		border-color $silver
+
+.open > &.-white:first-child
 	box-shadow inset 1px 2px 1px lighten($silver, 50%)
