Make table action buttons smaller

--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -18,6 +18,10 @@ th
 	max-width 100%
 	margin-bottom 20px
 	border none
+	
+	&__actions
+		.btn
+			padding 5px 10px
 
 	> thead > tr > th,
 	> tbody > tr > th,
