--- a/src/base/avatar.styl
+++ b/src/base/avatar.styl
@@ -6,28 +6,29 @@
 .avatar
 	img 
 		background-color darken($silver, 5%)
-		border-radius 2px
+		border-radius 3px
 	
 .avatar
+	display inline-block
 	position relative
-
-	&.-sm,
-	&.-xs
-		display inline-block
-		margin-right 10px
-		text-align center
 
 	&.-sm
 		width 40px
 		
+		+ .handle
+			margin-left 10px
+		
 	&.-xs
 		width 20px
-		margin-right 5px
+		
+		+ .handle
+			margin-left 5px
+			vertical-align middle
 
 	.emblem
 		position absolute
-		right -2px
-		bottom -4px
+		right -3px
+		bottom -5px
 		width 24px
 		height 18px
 		margin 0
@@ -35,5 +36,5 @@
 
 	&:hover
 		.emblem
-			bottom -8px
+			bottom -10px
 			opacity 0
