--- a/src/base/badge.styl
+++ b/src/base/badge.styl
@@ -2,7 +2,7 @@
 
 .badge
 	display inline-block
-	padding 1px 5px
+	padding 0 5px
 	border-radius 3px
 	background-color alpha($silver, 50%)
 	color mix($dark, $muted)
