--- a/src/base/dashlet.styl
+++ b/src/base/dashlet.styl
@@ -112,6 +112,6 @@ a > .dashlet:hover
 	.visual
 		transform scale(1.1)
 
-.panel > .content .dashlet
+.panel__body .dashlet
 	border none
 	box-shadow none
