Keep arena pside links white while active

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -79,7 +79,8 @@ body
 		transition border-left-color 0.125s ease-in-out
 
 		&:hover,
-		&:focus
+		&:focus,
+		&:active
 			border-left-color alpha(white, 50%)
 			color white
 	
