Tweak orange handle color

--- a/src/widgets/handle/index.styl
+++ b/src/widgets/handle/index.styl
@@ -13,7 +13,7 @@
 		color darken(#ca302f, 15%) // Red
 
 	&.-ss
-		color darken(#da9101, 15%) // Orange
+		color darken(#e87e04, 15%) // Orange
 
 	&.-s
 		color darken(#fcc201, 25%) // Yellow
@@ -37,7 +37,7 @@
 		background-color alpha(#ca302f, 0.05)
 
 	&.-ss
-		background-color alpha(#da9101, 0.05)
+		background-color alpha(#e87e04, 0.05)
 
 	&.-s
 		background-color alpha(#fcc201, 0.05)
@@ -62,7 +62,7 @@
 		background-color alpha(#ca302f, 0.1)
 
 	&.-ss
-		background-color alpha(#da9101, 0.1)
+		background-color alpha(#e87e04, 0.1)
 
 	&.-s
 		background-color alpha(#fcc201, 0.1)
