Add style for alert close button

--- a/src/base/alert.styl
+++ b/src/base/alert.styl
@@ -9,6 +9,10 @@
 		margin 0
 		border-width 0 0 1px
 		border-radius 0
+	
+	.alert__close
+		float right
+		margin-top -1px
 
 _alert(name, code)
 	.alert.-{name}
