--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -47,9 +47,16 @@
 			
 	&__drawer
 		display none
-		padding 15px 0 0
-		border-top 1px solid $silver
-		border-bottom 1px solid $silver
+		margin -10px -20px 10px
+		padding 15px 20px 0
+		border-top 1px solid lighten($silver, 50%)
+		border-bottom 1px solid lighten($silver, 50%)
+		box-shadow inset 0 1px 3px alpha($dark, 0.0325)
+		
+		&:after
+			display table
+			content " "
+			clear both
 
 		&.-open
 			display block
