Add style for pillsbox

--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -77,3 +77,10 @@
 		> :not(.-active),
 		.badge
 			display none
+
+	.pillsbox
+		display inline-block
+		margin-bottom 25px
+
+		> .panel
+			display none
