--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -71,7 +71,11 @@ th
 
 .tablebox
 	min-height .01%
+	margin-bottom 20px
 	overflow-x auto
+	
+	> .table
+		margin-bottom 0
 
 @media screen and (max-width: 767px)
 	.tablebox
