--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -50,6 +50,10 @@
 
 	.text + .icon
 		margin-left 5px
+	
+	&.-sm	
+		padding 5px 10px
+		font-size 0.95em
 
 _button(name, bg, text, edge=10%, hover=30%, active=15%)
 	.btn
