--- a/src/base/alert.styl
+++ b/src/base/alert.styl
@@ -3,7 +3,17 @@
 @require './color'
 
 .alert
-	border-radius 2px
+	padding 15px
+	margin-bottom 20px
+	border 1px solid transparent
+	border-radius 3px
+	
+	> p,
+	> ul
+		margin-bottom 0
+	
+	> p + p
+		margin-top 5px
 
 	&.-broadcast
 		margin 0
