--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -62,12 +62,11 @@ body
 		margin 22px 18px 11px
 
 		.progress
-			height 6px
+			height 5px
 			border-bottom 1px solid white
 			border-radius 0
-			background transparent
 			
-			.progress-bar
+			.progress__bar
 				background-color white
 
 	&__link
