--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
 @require './func'
-@require './color'
+@require './palette'
 @require './reset'
 @require './font'
 @require './text'
@@ -19,4 +19,4 @@
 @require './modal'
 @require './alert'
 @require './progress'
-@require './utility'
+@require './color'
