--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -24,6 +24,11 @@
 		min-height 50px
 		margin -10px 0 10px
 
+	&__foot.-shade
+		margin 0 -20px -20px -20px
+		padding 20px
+		background-color lighten($silver, 75%)
+
 	&__title
 		display inline-block
 		float left
@@ -68,7 +73,7 @@
 		.progress
 			margin-bottom 0
 
-	&.-clipped > .panel__body
+	&.-clipped > &__body
 		max-height 190px
 		overflow hidden
 		mask-image linear-gradient(to top, transparent 1%, white 50%)
