Remove box-shadow blur radius

--- a/src/base/dashlet.styl
+++ b/src/base/dashlet.styl
@@ -10,7 +10,7 @@
 	overflow hidden
 	background-color white
 	color $dark
-	box-shadow 0 1px 3px alpha($dark, 0.0325)
+	box-shadow 0 1px 0 alpha($dark, 0.0325)
 
 	&.active,
 	&.active:hover
