--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -15,7 +15,7 @@ fieldset
 	border-radius 2px
 
 	&:focus
-		box-shadow inset 0 1px 1px alpha($dark, .075), 0 0 3px alpha($blue, 0.6)
+		box-shadow inset 0 1px 0 alpha($dark, .075)
 
 .form-horizontal .control-label
 	text-align left
