--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -10,7 +10,7 @@ body
 	margin-bottom 25px
 	border-bottom 1px solid $silver
 	background white
-	box-shadow 0 1px 3px alpha($dark, 0.0325)
+	box-shadow 0 1px 0 alpha($dark, 0.0325)
 
 	&__logo
 		float left
