--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -9,7 +9,7 @@
 	border 1px solid $silver
 	border-radius 2px
 	background-color white
-	box-shadow 0 1px 3px alpha($dark, 0.0325)
+	box-shadow 0 1px 0 alpha($dark, 0.0325)
 
 	&.-fit
 		padding 0
@@ -56,7 +56,7 @@
 		padding 15px 20px 0
 		border-top 1px solid lighten($silver, 50%)
 		border-bottom 1px solid lighten($silver, 50%)
-		box-shadow inset 0 1px 3px alpha($dark, 0.0325)
+		box-shadow inset 0 1px 0 alpha($dark, 0.0325)
 		
 		&:after
 			display table
