--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -117,7 +117,7 @@
 					font-size 14px
 					text-align left
 					background-color white
-					box-shadow 0 3px 5px alpha($dark, 0.05)
+					box-shadow 0 3px 0 alpha($dark, 0.05)
 					
 					> a
 						display block
