--- a/src/widgets/switch/index.styl
+++ b/src/widgets/switch/index.styl
@@ -34,9 +34,7 @@
 	height 100%
 	border 1px solid $silver
 	border-radius 2px
-	-webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
-	box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
-	-webkit-transition background-color 0.25s ease
+	box-shadow inset 0 1px 0 rgba(0, 0, 0, .075)
 	transition background-color 0.25s ease
 
 .switch__toggle::after
@@ -48,8 +46,7 @@
 	border 1px solid $silver
 	border-radius 2px
 	background-color white
-	box-shadow 0 1px 1px alpha($dark, .075)
-	-webkit-transition left 0.25s ease
+	box-shadow 0 1px 0 alpha($dark, .075)
 	transition left 0.25s ease
 
 .switch__input:checked + .switch__toggle::before
