Include grid.styl in base index

--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -3,6 +3,7 @@
 @require './func'
 @require './palette'
 @require './reset'
+@require './grid'
 @require './font'
 @require './text'
 @require './form'
