--- a/src/widgets/switch/index.styl
+++ b/src/widgets/switch/index.styl
@@ -32,8 +32,8 @@
 .switch__toggle::before
 	width 100%
 	height 100%
-	border 1px solid $silver
-	border-radius 2px
+	border 1px solid mix($dark, $silver, 10)
+	border-radius 3px
 	box-shadow inset 0 1px 0 rgba(0, 0, 0, .075)
 	transition background-color 0.25s ease
 
@@ -44,13 +44,15 @@
 	height 20px
 	margin 6px
 	border 1px solid $silver
-	border-radius 2px
+	border-radius 3px
 	background-color white
 	box-shadow 0 1px 0 alpha($dark, .075)
 	transition left 0.25s ease
 
 .switch__input:checked + .switch__toggle::before
-	background-color $blue
+	background-color alpha($blue, 0.05)
 
 .switch__input:checked + .switch__toggle::after
 	left 20px
+	border-color $blue
+	background-color $blue
