--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -24,9 +24,6 @@
 		box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
 		transition border-color ease-in-out .15s, box-shadow ease-in-out .15s
 		
-		&.flatpickr-input[readonly]
-			background-color white
-		
 		&:focus
 			border-color $blue
 			outline 0
@@ -37,6 +34,9 @@
 	
 	textarea.form__field
 		height auto
+
+	&__field.flatpickr-input[readonly]
+		background-color white
 
 	&__hint
 		margin-top 5px
