--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -57,7 +57,7 @@
 fieldset
 	margin 0 -20px 30px
 	padding 30px 20px 0
-	border-top 1px dotted $silver
+	border-top 1px solid lighten($silver, 75%)
 
 	.&__head
 		margin-bottom 15px
