Add style for fieldset.-closed

--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -75,6 +75,14 @@ fieldset
 		margin-top 5px
 		color $muted
 
+
+	&.-closed
+		.fieldset__head
+			margin-bottom 0
+
+		.form__group
+			display none
+
 	&.-flags
 		.form__group
 			margin-bottom 20px
