Update dropdown header style

--- a/src/base/dropdown.styl
+++ b/src/base/dropdown.styl
@@ -46,9 +46,8 @@
 				background-color transparent
 	
 	.dropdown-header
-		padding 10px 15px
-		font-size inherit
-		font-weight 500
+		padding 10px 15px 5px
+		font-size 0.9em
 
 	.divider
 		margin 0
