--- a/src/widgets/strips/index.styl
+++ b/src/widgets/strips/index.styl
@@ -9,20 +9,19 @@
 	&__item
 		display block
 		position relative
-		padding 10px 20px 10px 15px
+		padding 10px 20px
 		border-bottom 1px solid lighten($silver, 75%)
-		border-left 5px solid transparent
 		transition background-color 0.25s ease-in-out
 		
 		&:focus,
 		&:hover
-			border-left-color alpha($blue, 50%)
+			box-shadow inset 10px 0 0 -5px alpha($blue, 50%)
 
 		&:last-child
 			border-bottom none
 
 		&.-active
-			border-left-color $blue
+			box-shadow inset 10px 0 0 -5px $blue
 			color $dark
 
 			&:last-child
