Add a style for grouped fields/switches; closes #6

--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -44,6 +44,21 @@
 	&__field.flatpickr-input[readonly]
 		background-color white
 
+	&__brace
+		display table
+		width 100%
+
+		> .form__field
+			display table-cell
+			width 100%
+			vertical-align middle
+
+		& .form__addon
+			display table-cell
+			width 0.1%
+			padding-right 10px
+			vertical-align middle
+
 	&__hint
 		margin-top 5px
 		color $muted
