--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -37,7 +37,7 @@ th
 	> thead > tr > td,
 	> tbody > tr > td,
 	> tfoot > tr > td
-		padding 10px
+		padding 1rem
 		line-height 1.42857143
 		vertical-align top
 
@@ -56,6 +56,7 @@ th
 	
 	> tbody > tr
 		border-bottom 1px solid lighten($silver, 50%)
+		transition opacity 125ms ease-in
 		
 		&:last-child
 			border-bottom none
@@ -76,6 +77,9 @@ th
 	> tbody > tr.active > th,
 	> tfoot > tr.active > th
 		background-color lighten($silver, 75%)
+
+.table.-emphasis > tbody:hover tr:not(:hover)
+	opacity 0.75
 
 .tablebox
 	min-height .01%
