--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -23,13 +23,14 @@ th
 		text-align right
 		
 		.btngroup.-hover
-			display none
+			opacity 0.25
+			transition opacity 125ms ease-in
 
 		.btn
 			padding 5px 10px
 	
 	tr:hover .table__actions .btngroup.-hover
-		display inline-block
+		opacity 1
 
 	> thead > tr > th,
 	> tbody > tr > th,
