--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -56,10 +56,9 @@ th
 	
 	> tbody > tr
 		border-bottom 1px solid lighten($silver, 50%)
-		transition opacity 125ms ease-in
 		
 		&:last-child
-			border-bottom none
+			border-bottom-color transparent
 
 	> tbody + tbody
 		border-top 1px solid lighten($silver, 50%)
@@ -78,8 +77,8 @@ th
 	> tfoot > tr.active > th
 		background-color lighten($silver, 75%)
 
-.table.-emphasis > tbody:hover tr:not(:hover)
-	opacity 0.75
+.table.-emphasis > tbody tr:hover
+	background linear-gradient(transparent 1px, lighten($blue, 62.5%) 1px, transparent 3px), linear-gradient(to top, transparent 1px, lighten($blue, 62.5%) 1px, transparent 3px)
 
 .tablebox
 	min-height .01%
