Optimize emblem animation

--- a/src/base/avatar.styl
+++ b/src/base/avatar.styl
@@ -30,11 +30,11 @@
 		width 24px
 		height 18px
 		margin 0
-		transition opacity 0.25s ease, bottom 0.25s ease
+		transition opacity 200ms ease, transform 250ms ease
 
 	&:hover
 		.emblem
-			bottom -10px
+			transform translateY(10px)
 			opacity 0
 
 .avatarset
