--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -3,27 +3,6 @@
 @require './func'
 @require './color'
 
-.btngroup
-	position relative
-	display inline-block
-	margin-left 5px
-	
-	&:first-child
-		margin-left 0
-	
-	> .btn
-		position relative
-		float left
-
-		&:not(:first-child):not(:last-child)
-			border-radius 0
-
-		&:first-child:not(:last-child):not(.-toggle)
-			border-radius 3px 0 0 3px
-
-		&:last-child:not(:first-child), &.-toggle:not(:first-child)
-			border-radius 0 3px 3px 0
-
 .btn
 	display inline-block
 	padding 10px 15px
@@ -123,3 +102,24 @@ _button('red', $red, white, 20%, 45%, 22.5%)
 	&:active,
 	&.-active
 		border-color $silver
+
+.btngroup
+	position relative
+	display inline-block
+	margin-left 5px
+	
+	&:first-child
+		margin-left 0
+	
+	> .btn
+		position relative
+		float left
+
+		&:not(:first-child):not(:last-child)
+			border-radius 0
+
+		&:first-child:not(:last-child):not(.-toggle)
+			border-radius 0.25rem 0 0 0.25rem
+
+		&:last-child:not(:first-child), &.-toggle:not(:first-child)
+			border-radius 0 0.25rem 0.25rem 0
